docs/book/samples/ch01/unused_check.out
error[unused]: unused binding `greeting`
  --> unused_check.kso:3:3
   3 |   greeting = "hello"
         ^
