docs/book/samples/ch01/unused_check.kso
main =
  name = "clay"
  greeting = "hello"
  print "hello, {name}"
